MCKIN-9549 Fixed z-index (#2893)

--- a/static_v2/scss/pages/_courses.scss
+++ b/static_v2/scss/pages/_courses.scss
@@ -16,7 +16,7 @@
     overflow: hidden;
     .future-course-text {
       @extend .current-bookmark-text;
-      z-index: 999;
+      z-index: 1;
       display: none;
     }
     .overlay-img {
